--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,13 @@ dependencies:
     sdk: flutter
   intl: ^0.16.1
   http: ^0.12.0+4
+  weather_icons: ^2.0.1
   flutter_spinkit: "^4.1.2"
+  flutter_icons: ^1.1.0
+  simple_animations: ^2.1.0
+  supercharged: ^1.4.0
+  connectivity: ^0.4.8+2
+  shared_preferences: ^0.5.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -45,6 +51,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/morning/
+    - assets/images/evening/
+    - assets/images/night/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -63,6 +72,13 @@ flutter:
         - asset: assets/fonts/OpenSans-Regular.ttf
         - asset: assets/fonts/OpenSans-Bold.ttf
           weight: 700
+
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
+          
     - family: Quicksand
       fonts:
         - asset: assets/fonts/Quicksand-Regular.ttf
