--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   simple_animations: ^2.1.0
   supercharged: ^1.4.0
   connectivity: ^0.4.8+2
-  shared_preferences: ^0.5.7
+  flutter_pdfview: ^1.0.0+10 
+  path_provider: ^1.6.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
